# si-code

./: .gitignore  README.md  pyproject.toml
.claude/agents/: analyst.md  developer.md  reviewer.md  secretary.md
.claude/commands/: feature.md
docs/daily/: 2026-04-30.md  2026-05-01.md
docs/runs/2026-04-30/: issue-1.md  issue-3-Ollama 연결 모드.md
docs/runs/2026-05-01/: issue-5-SimpleMode 제거 및 기본 모델 변경.md  issue-7-슬래시 명령 시스템.md
sicode/: __init__.py  __main__.py  main.py  repl.py
sicode/commands/: __init__.py  base.py  clear.py  exit.py  help.py  registry.py  system.py
sicode/init/: __init__.py  command.py  renderer.py  scanner.py
sicode/modes/: __init__.py  base.py  conversation.py  ollama.py  ollama_chat.py  simple.py
tests/: conftest.py  test_clear_system_commands.py  test_commands.py  test_main.py  test_main_select_mode.py  test_repl.py  test_simple_mode.py
tests/init/: test_command.py  test_renderer.py  test_scanner.py
tests/modes/: test_conversation.py  test_ollama.py  test_ollama_chat.py
